Changelog for Miosix np embedded OS

- File abstraction layer: Merged NullFile and NullConsoleDevice classes.
- File abstraction layer: DeviceFile now implements a default version of
  lseek and fstat, to factorize common code from individual device files.
- File abstraction layer: added class DeviceFile from which all files meant
  to be attached to a DevFs should derive. Contains the code to assign an
  unique inode to each of them.
- File abstraction layer: added FilesystemManager::getFilesystemId() to
  have a different st_dev field when stat-ing files from different filesystems.
- File abstraction layer: added stringpart.cpp/.h and devfs/base_files.cpp/.h
  to better modularize code in files. file.h now contains only FileBase and
  FilesystemBase.
- Modified again the newlib patch, to make ino_t an unsigned long, as the
  default was an unsigned short. This change requires recompiling GCC!
- Removed old filesystem mount code in mainLoader(), replaced with
  a call to basicFilesystemSetup() in all BSPs.
- File abstraction layer: added basicFilesystemSetup() to file_access.h
- interfaces/console.h is no longer #included in miosix.h
- Removed the need to call IRQtxComplete() after IRQwrite() in the new
  ConsoleDevice interface, as it simplifies code. Starting getting rid of
  the old console interfaces in many places.
- isatty() and sync() are no longer pure virtual in FileBase, added default
  implementation as in many cases it's enough.
- Removed temporary Console initialization code from _init() and added it
  to individual BSPs. However, we're still using the deprecated Console
  interface and ConsoleAdapter class.
- Joined the InterruptOutputDevice and ConsoleDevice concepts.
  Renamed ConsoleDevice into DefaultConsole, and moved it in a file within
  devfs directory.
- Added code to prevent C++ exceptions from propagating through C syscalls.
- Removed support for old single filesystem support in libc_integration.